<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="eventViewModel"
            type="mobg5.g55315.project1.screens.events.event.EventViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.events.event.EventFragment">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/event_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginBottom="@dimen/margin_wide"
            android:clickable="true"
            android:contentDescription="@string/create_event"
            android:focusable="true"
            android:onClick="@{() -> eventViewModel.onEventCreateClicked()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_input_add" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabPast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past" />


        </com.google.android.material.tabs.TabLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
